--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=yes">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <link href=' http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  <link href=' http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href=' http://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
@@ -49,8 +50,14 @@
         <h2 id="profession"> modell </h2>
         <p id="location"><i class="fa fa-map-marker"></i>Paris, FR </p>
       </div>
+      
       <div class="photo">
+        <div class="origin">
         <img src="assets/monalisa.jpg" alt="Mona Lisa">
+        </div>
+        <div class="fun">
+        <img src="assets/monalisacat.jpg" alt="Mona Lisa">
+        </div>
       </div>
      
     </div>
