picture and color

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img src="assets/monalisa.jpg" alt="Mona Lisa">
         </div>
         <div class="fun">
-        <img src="assets/monalisacat.jpg" alt="Mona Lisa">
+        <img src="assets/monalisacat3.jpg" alt="Mona Lisa">
         </div>
       </div>
       
